Generate JavaDoc Files, Complete README.txt file, Delete Extraneous files